<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/LinearLayout1"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_gravity="center"
	android:background="@color/azul_claro"
	android:orientation="vertical"
	tools:context="${relativePackage}.${activityClass}" >

	<TextView
		android:id="@+id/textViewPerguta"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginTop="10dp"
		android:background="@drawable/custumerborder"
		android:gravity="center"
		android:text="@string/texto_pergunta_idade"
		android:textColor="#000000"
		android:textSize="25sp" />

	<TableLayout
		android:id="@+id/tabela"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginTop="10dp"
		android:background="@drawable/custumerborder2"
		android:clipToPadding="true" >

		<TableRow
			android:id="@+id/tableRow1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center" >

			<TextView
				android:id="@+id/textView1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView5"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView6"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />
		</TableRow>

		<TableRow
			android:id="@+id/tableRow2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center" >

			<TextView
				android:id="@+id/textView7"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView8"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView9"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView10"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView11"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView12"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />
		</TableRow>

		<TableRow
			android:id="@+id/tableRow3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center" >

			<TextView
				android:id="@+id/textView13"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView14"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView15"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView16"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView17"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView18"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />
		</TableRow>

		<TableRow
			android:id="@+id/tableRow4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center" >

			<TextView
				android:id="@+id/textView19"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView20"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView21"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView22"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView23"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView24"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />
		</TableRow>

		<TableRow
			android:id="@+id/tableRow6"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center" >

			<TextView
				android:id="@+id/textView25"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView26"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView27"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView28"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView29"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView30"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/texto_numero"
				android:textColor="#000000"
				android:textSize="25sp" />
		</TableRow>
	</TableLayout>

	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center" >

		<TableRow
			android:id="@+id/tableRow7"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:gravity="center" >

			<Button
				android:id="@+id/btnSim"
				android:layout_width="150dp"
				android:layout_height="wrap_content"
				android:background="@color/verde"
				android:padding="10dp"
				android:text="@string/label_button_sim"
				android:textColor="@color/text_button"
				android:textSize="25sp" />

			<Button
				android:id="@+id/btnNao"
				android:layout_width="150dp"
				android:layout_height="wrap_content"
				android:background="@color/vermelho"
				android:padding="10dp"
				android:text="@string/label_button_nao"
				android:textColor="@color/text_button"
				android:textSize="25sp" />

		</TableRow>
	</TableLayout>
	
	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center" >

		<TableRow
			android:id="@+id/tableRow8"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center" >

			<Button
				android:id="@+id/btnVoltar"
				android:layout_width="300dp"
				android:layout_height="wrap_content"
				android:background="@color/azul"
				android:padding="5dp"
				android:text="@string/label_button_voltar"
				android:textColor="@color/text_button"
				android:textSize="25sp" />

		</TableRow>
	</TableLayout>
	
</LinearLayout>